--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -280,10 +280,10 @@ form.gdpr-accept {
   margin-top: 10px;
   .gdpr-label {
     font-weight: 400;
-    line-height: 1.2;
+    line-height: 1.3;
     margin: 10px 0;
 
-    input[type=text] {
+    input[type=checkbox] {
       margin-right: 3px;
       top: 2px;
     }
