--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -244,6 +244,7 @@
   border-radius: @border-radius-base;
 }
 // Faktaboks
+
 .factbox {
   position: relative;
   background-color: @factbox-bg;
@@ -273,19 +274,25 @@
     width: 100%!important;
   }
 }
-
 // Newsletter and GDPR
-
 form.gdpr-accept {
   margin-top: 10px;
+
   .gdpr-label {
     font-weight: 400;
     line-height: 1.3;
-    margin: 10px 0;
+    font-size: 12px;
+    margin: 10px 0 15px;
 
     input[type=checkbox] {
       margin-right: 3px;
       top: 2px;
+    }
+  }
+
+  .btn {
+    + .btn {
+      margin-left: 10px;
     }
   }
 }
