--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -255,8 +255,7 @@
   width: 45%;
   border-radius: @border-radius-base;
   float: right;
-  margin-left: 15px;
-  margin-bottom: 5px;
+  margin: 5px 0 5px 10px;
 
   h3 {
     margin: 0 0 3px;
@@ -265,6 +264,8 @@
   @media (max-width: @screen-sm) {
     margin: 10px 0;
     width: 100%;
+    font-weight: 13px;
+    line-height: unset;
   }
   &-left {
     float: left;
@@ -273,7 +274,7 @@
 }
 
 .column1,
-.rightbox {
+.right-side {
   .factbox {
     width: 100%!important;
   }
