--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -264,12 +264,13 @@
   @media (max-width: @screen-sm) {
     margin: 10px 0;
     width: 100%;
-    font-weight: 13px;
+    font-size: 13px;
     line-height: unset;
   }
   &-left {
     float: left;
     margin-right: 15px;
+    margin-left: 0;
   }
 }
 
