Removing old editor overrides

--- a/less/variables.less
+++ b/less/variables.less
@@ -134,7 +134,7 @@
 @ku-conversation:       #d8352a;
 
 // Fact box colors:
-@factbox-bg:            #d0dbe1;
+@factbox-bg:            #e7e7e7;
 
 // KU gradients
 
