--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -288,6 +288,9 @@
 
 form.gdpr-accept {
   margin-top: 10px;
+  label[for="email"] {
+   margin-bottom: 5px;
+}
 
   .gdpr-label {
     font-weight: 400;
