--- a/docs/assets/css/datatables/datatables.css
+++ b/docs/assets/css/datatables/datatables.css
@@ -39,7 +39,7 @@
   margin-top: 6px !important;
   margin-bottom: 6px !important;
   max-width: none !important;
-  word-wrap: break-word;
+  /* word-wrap: break-word; */
   /*border-collapse: separate !important;*/
 }
 
