--- a/docs/assets/css/doctypes/medarbejderoversigt.css
+++ b/docs/assets/css/doctypes/medarbejderoversigt.css
@@ -10,6 +10,9 @@
   white-space: nowrap;
 }
 
+#medarbejdertable tr th {
+    border-bottom: 20;
+}
 
 #medarbejdertable tr th:nth-child(4),
 #medarbejdertable tr th:nth-child(4) input {
