--- a/less/tables.less
+++ b/less/tables.less
@@ -207,6 +207,11 @@ th {
     }
   }
 }
+.standard_table {
+  // Without table-layout
+  table-layout: auto;
+}
+
 // Table cell sizing
 //
 // Reset default table behavior
