--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -81,6 +81,10 @@ figure {
   figure {
     display: block;
   }
+  .figure-caption,
+  figcaption {
+    width: 100%;
+  }
 }
 // KU specific - editor classes
 
