--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -77,10 +77,10 @@ figure {
 }
 @-moz-document url-prefix() {
   // Firefox only
-  .figure,
-  figure {
-    display: block;
-  }
+  // .figure,
+  // figure {
+  //   display: block;
+  // }
   // .figure-caption,
   // figcaption {
   //   width: 100%;
