--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -461,13 +461,11 @@ You can use the mark tag to <mark>highlight</mark> text.
 </div>
 
 <!-- Jump to anchors -->
-<h1 id="type-jump-to">Jump to #id</h1>
-<p>Jump to anywhere on a page. To go go another page and jump to an id, add the full url followed by the href value: <code>https://yourpage.com#type</code></p>
+<h2 id="type-jump-to">Jump to #id</h2>
+<p>Jump to anywhere on a page. To go go another page and jump to an id, add the full url followed by the href value which is the id of your target: <code>https://yourpage.com#type</code></p>
 <div class="bs-example" data-example-id="jump-top">
-  <div class="jump-anywhere">
-    <a class="jump-to" title="Jump" href="#type">Jump</a>
-  </div>
+  <a class="jump-to" title="Jump" href="#type-jump-to">Jump</a>
 </div>
 {% highlight html %}
-<a class="jump-to" title="Jump" href="#type">Jump</a>
+<a class="jump-to" title="Jump" href="#type-jump-to">Jump</a>
 {% endhighlight %}
