--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -95,6 +95,7 @@ ul {
 .standard_table {
   border-collapse: collapse;
   border: 1px solid #d7d7d7;
+  table-layout: fixed;
 
   td {
     padding: 10px 8px 10px 12px;
@@ -104,4 +105,12 @@ ul {
 
 .fritekst_top_img {
   margin-bottom: 10px;
+}
+
+.visible-desktop {
+  display: block;
+}
+
+.visible-mobile {
+  display: none;
 }
