--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -239,10 +239,8 @@
 // Textboxes
 
 .textbox-grey {
-  // To-do: delete this as it's been replaced by .well
-  background-color: @gray-lighter;
-  padding: 15px;
-  border-radius: @border-radius-base;
+  // To-do: delete this class as it's been replaced by .well
+  .well;
 }
 // Faktaboks
 
