--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -146,6 +146,12 @@ nav {
     }
   }
 }
+
+.rightbox {
+  .rightbox-normal:last-child {
+    margin-bottom: 0;
+  }
+}
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
   .gccolumn {
     &[class^="col-"][class$="-12"] {
