--- a/less/thumbnails.less
+++ b/less/thumbnails.less
@@ -112,9 +112,9 @@ figcaption {
   caption-side: bottom;
 }
 
-.fritekst_over_img,
-.uden-boks-top {
+// .fritekst_over_img,
+// .uden-boks-top {
   // We no longer support this!
   // position: absolute;
   // margin-top: -39px;
-}
+// }
