--- a/docs/assets/css/social-feeds/instagram.css
+++ b/docs/assets/css/social-feeds/instagram.css
@@ -24,7 +24,7 @@ Needs html like this:
 }
 
 [id*="ig"].gridbox .box1 {
-  position: absolute;
+  position: absolute!important;
   bottom: 0;
   left: 0;
   width: 100%;
