--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -146,8 +146,14 @@ nav {
 }
 
 .rightbox {
-  .rightbox-normal:last-child {
-    margin-bottom: 0;
+  .rightbox-normal {
+    &:first-child {
+      margin-top: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 }
 @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
@@ -158,16 +164,13 @@ nav {
     }
   }
 }
-
 //KU remove gutter from columns
-
 .no-gutter {
   > [class*='col-'] {
     padding-right: 0;
     padding-left: 0;
   }
 }
-
 @media (max-width: @screen-sm-max) {
   // Margin top for mobile and tablets
   .mobile-margin-top-10 {
