--- a/less/tables.less
+++ b/less/tables.less
@@ -208,6 +208,19 @@ th {
   }
 }
 
+// table with images in first td of each tr - remove left padding
+.table-with-img-col {
+  > tbody {
+    > tr {
+      > td {
+        &:first-child {
+          padding-left: 0;
+        }
+      }
+    }
+  }
+}
+
 // Table cell sizing
 //
 // Reset default table behavior
