--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -388,8 +388,11 @@
       }
 
       &.full-bg {
-        position: absolute;
+        position: relative;
         top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         padding: 15px;
         width: 100%;
       }
