--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -182,7 +182,7 @@
   line-height: 0;
   position: absolute;
   top: 50%;
-  display: none;
+  visibility: hidden;
   width: 40px;
   height: 40px;
   padding: 0;
@@ -223,7 +223,7 @@
   }
   @media (min-width: @screen-sm) {
     // Only display arrows in desktop
-    display: block;
+    visibility: visible;
   }
 }
 
