--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -222,3 +222,7 @@ table.properties>tbody>tr:hover {
 .publications_view .rendering ul.relations {
   clear: both;
 }
+
+.person_photo {
+  margin-left: 5px;
+}
