--- a/less/ku-legacy.less
+++ b/less/ku-legacy.less
@@ -131,6 +131,7 @@ div[class^="img-with-caption"] {
   // Caption
   p {
     padding: 10px 0;
+    margin: 0;
     font-size: @figure-caption-font-size;
     color: @gray-light;
     border-bottom: 1px solid @figure-caption-border-color;
