--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -233,3 +233,7 @@ table.properties>tbody>tr:hover {
   width: 100%;
   padding: 0;
 }
+
+.pureportal .view_container ul.tabs li:first-child, .pureportal .view_container ul.tabs li:nth-child(3) {
+  display: none;
+}
