--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -237,6 +237,6 @@ table.properties>tbody>tr:hover {
   padding: 0;
 }
 
-.pureportal .view_container ul.tabs > li:nth-child(1), .pureportal .view_container ul.tabs >li:nth-child(3) {
+/* .pureportal .view_container ul.tabs > li:nth-child(1), .pureportal .view_container ul.tabs >li:nth-child(3) {
   display: none;
-}
+} */
