--- a/less/ku-cms-components.less
+++ b/less/ku-cms-components.less
@@ -139,7 +139,7 @@ nav {
       margin-top: @grid-gutter-height;
     }
 
-    .rightbox-normal:first-child {
+    .panel:first-child {
       margin-top: @grid-gutter-height;
     }
   }
@@ -156,7 +156,7 @@ nav {
     }
   }
 
-  .panel-default {
+  .panel {
     &:last-child {
       margin-bottom: 0;
     }
