--- a/less/navs.less
+++ b/less/navs.less
@@ -154,6 +154,7 @@
       color: @text-color;
       background-color: @nav-pills-bg-color;
       border-radius: @nav-pills-border-radius;
+      border: 1px solid @gray;
 
       &:hover {
         background-color: @ku-nav-tabs-and-pills-hover-bg-color
