--- a/docs/assets/css/doctypes/pureintegration.css
+++ b/docs/assets/css/doctypes/pureintegration.css
@@ -33,3 +33,20 @@ div.tabbed-search-box ul.box-tabs {
 .altmetric-embed {
   margin-top: 23px;
 }
+
+.pureportal .portal_search_body .portal_list {
+  width: 100%;
+}
+
+.pureportal .tabbed-search-box ul.box-tabs li a {
+  font-size: 13px;
+}
+
+.pureportal .tabbed-search-box .gradient-search-box {
+  max-width: none!important;
+  border-color: #ccc;
+}
+
+.pureportal .tabbed-search-box .gradient-search-box input.portal_searchfield, .search_box input.portal_searchfield {
+  width: 100%!important;
+}
