--- a/less/navs.less
+++ b/less/navs.less
@@ -181,6 +181,11 @@
     + li {
       margin-top: 2px;
     }
+    // Active state
+    &.active > a {
+        border-color: @nav-pills-active-link-hover-bg;
+      }
+
   }
 }
 // Nav variations
