--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -93,6 +93,9 @@ body {
     background-color: #fbfbf7;
     padding: 0 15px;
   }
+  .mce-floatpanel[aria-label="Insert link"] {
+    height: auto!important;
+  }
 }
 
 .mce-container-body [aria-label~="accordion"] {
