--- a/less/mixins.less
+++ b/less/mixins.less
@@ -44,3 +44,4 @@
 @import "mixins/ku-links.less";
 @import "mixins/ku-content-elements.less";
 @import "mixins/ku-gridbox-mixins.less";
+@import "mixins/ku-news.less";
