--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -19,5 +19,12 @@
         }
       }
     }
+    &.smal {
+      .media-body {
+        &:first-child {
+          padding-left: 74px;
+        }
+      }
+    }
   }
 }
