--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -217,22 +217,22 @@
 }
 // Float images right on single column spans:
 
-#gridsidebar .single-column .column1,
-.double-column [class*=column],
-.one-two-column .column1,
-.quad-column [class*=column],
-.triple-column [class*=column],
-.two-one-column .column2 {
-  .img-right();
-}
+// #gridsidebar .single-column .column1,
+// .double-column [class*=column],
+// .one-two-column .column1,
+// .quad-column [class*=column],
+// .triple-column [class*=column],
+// .two-one-column .column2 {
+//   .img-right();
+// }
 // Float images left on multiple column spans
 
-.gridcontent:not(#gridsidebar) .single-column .column1,
-.one-one-two-column .column3,
-.one-three-column .column2,
-.one-two-column .column2,
-.three-one-column .column1,
-.two-one-column .column1,
-.two-one-one-column .column1 {
-  .img-left();
-}
+// .gridcontent:not(#gridsidebar) .single-column .column1,
+// .one-one-two-column .column3,
+// .one-three-column .column2,
+// .one-two-column .column2,
+// .three-one-column .column1,
+// .two-one-column .column1,
+// .two-one-one-column .column1 {
+//   .img-left();
+// }
