--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -18,6 +18,9 @@
           display: none;
         }
       }
+      .news-teaser {
+        margin-left: 74px;
+      }
     }
     &.smal {
       .media-body {
