--- a/less/mixins/ku-news.less
+++ b/less/mixins/ku-news.less
@@ -14,14 +14,17 @@
   .media-list {
     .media {
       .media-body {
-        > .media-right, + .media-right {
+        > .media-right,
+        + .media-right {
           display: none;
         }
       }
+
       .news-teaser {
         margin-left: 74px;
       }
     }
+
     &.smal {
       .media-body {
         &:first-child {
