--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -388,7 +388,7 @@
       }
 
       &.full-bg {
-        position: absolute;
+        //position: absolute;
         top: 0;
         bottom: 0;
         left: 0;
