--- a/less/navs.less
+++ b/less/navs.less
@@ -63,7 +63,7 @@
   }
 }
 //KU menu item pipes
-@media (min-width: @screen-sm-min) {
+@media (min-width: @screen-xs-max) {
   .ku-nav {
     display: block;
 
