--- a/less/navbar.less
+++ b/less/navbar.less
@@ -175,8 +175,8 @@
 
 .container,
 .container-fluid {
-  > .navbar-collapse,
-  > .navbar-header {
+  > .navbar-header,
+  > .navbar-collapse {
     margin-right: -@navbar-padding-horizontal;
     margin-left: -@navbar-padding-horizontal;
     @media (min-width: @grid-float-breakpoint) {
@@ -307,8 +307,8 @@
       border: 0;
       box-shadow: none;
 
-      .dropdown-header,
-      > li > a {
+      > li > a,
+      .dropdown-header {
         padding: 5px 15px 5px 25px;
       }
 
@@ -341,6 +341,10 @@
 #topbar_menu {
   height: 100%;
   margin-right: 0;
+  @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
+    // iPad
+    font-size: 12px;
+  }
   font-size: 13px;
 
   &.navbar-nav {
